--- a/package.json
+++ b/package.json
@@ -18,11 +18,9 @@
   "dependencies": {
     "@nuxt/eslint": "1.10.0",
     "@nuxt/hints": "1.0.0-alpha.2",
-    
     "@nuxt/image": "2.0.0",
     "@nuxt/test-utils": "3.20.1",
-    "eslint": "^9.0.0",
-    
+    "dayjs": "^1.11.13",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3",
     "@nuxtjs/sitemap": "^7.4.7",
@@ -42,7 +40,7 @@
     "@vitest/ui": "^3.2.0",
     "@vue/test-utils": "^2.4.6",
     "@vueuse/nuxt": "^13.9.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.10.1",
     "eslint-plugin-import": "^2.32.0",
